Feb 26, 2014 - chris ---------------------------------------------------
o Fixed a freelist bug; the persistent freelist state was sometimes not
	correctly initialized

Feb 21, 2014 - chris ---------------------------------------------------
                      release of hamsterdb-2.1.6

Feb 21, 2014 - chris ---------------------------------------------------
o issue #30: very small cache sizes cause file size explosion

Feb 20, 2014 - chris ---------------------------------------------------
o The log was merged with the journal; the journal now stores
	redo-information for physical changes. To improve performance, the journal
	buffers its data before flushing to disk.

Feb 08, 2014 - chris ---------------------------------------------------
                      release of hamsterdb-2.1.5

Feb 06, 2014 - chris ---------------------------------------------------
o Bugfix: cache purges always purged one page only; now purges as many as
	required

Feb 05, 2014 - chris ---------------------------------------------------
o Fixed several regressions that crept in when 2.1.4 was released

Feb 04, 2014 - chris ---------------------------------------------------
o Bugfix: if a Database is closed in an in-memory Environment, the Database
	name was still occupied and the Database could not be re-created.

Jan 28, 2014 - chris ---------------------------------------------------
o The freelist was replaced and scales much better now
o Removed the parameter HAM_PARAM_MAX_DATABASES - the number of databases
	is now always set to the maximum limit.

Jan 08, 2014 - chris ---------------------------------------------------
o Removed HAM_CACHE_STRICT, HAM_CACHE_FULL and the related functionalities

Jan 05, 2014 - chris ---------------------------------------------------
                      release of hamsterdb-2.1.4

Jan 01, 2014 - chris ---------------------------------------------------
o Default Btree node layout now also stores duplicate keys inline, even