@@ -39,8 +39,8 @@ class RemoteDatabase : public Database
     // Returns Database parameters (ham_db_get_parameters)
     virtual ham_status_t get_parameters(ham_parameter_t *param);
 
-    // Checks Database integrity (ham_check_integrity)
-    virtual ham_status_t check_integrity(Transaction *txn);
+    // Checks Database integrity (ham_db_check_integrity)
+    virtual ham_status_t check_integrity(Transaction *txn, ham_u32_t flags);
 
     // Returns the number of keys (ham_db_get_key_count)
     virtual ham_status_t get_key_count(Transaction *txn, ham_u32_t flags,
