@@ -283,6 +283,7 @@ message TxnAbortReply {
 message DbCheckIntegrityRequest {
   required uint64 db_handle = 1;
   required uint64 txn_handle = 2;
+  required uint32 flags = 3;
 }
 
 message DbCheckIntegrityReply {
