@@ -2,6 +2,11 @@ Feb 26, 2014 - chris ---------------------------------------------------
 o Fixed a freelist bug; the persistent freelist state was sometimes not
 	correctly initialized
 
+Feb 25, 2014 - chris ---------------------------------------------------
+o ham_db_check_integrity() has an additional parameter for flags; currently
+	supported is HAM_PRINT_GRAPH, which prints a btree to a graph file for
+	"dot". Only if HAM_DEBUG is enabled.
+
 Feb 21, 2014 - chris ---------------------------------------------------
                       release of hamsterdb-2.1.6
 
